--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <head>
 <title>Page not found</title>
 
-<p><i>You step in the stream,
-But the water has moved on.
+<p style="text-align:center"><i>You step in the stream,<br>
+But the water has moved on.<br>
 This page is not here.</i></p>
 
 <script data-goatcounter="https://vivtek.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
