Published code_analysis.html from notes

--- a/code_analysis.html
+++ b/code_analysis.html
@@ -2,6 +2,7 @@
 <head>
 <title>Code analysis and software measurement</title>
 <link href="/styles/vv.css" rel="stylesheet">
+<link href="styles/vv.css" rel="stylesheet">
 </head>
 <body>
 <table width="100%">
