Published open_source.html from notes

--- a/open_source.html
+++ b/open_source.html
@@ -73,7 +73,7 @@ I'm currently working on a proposal there for a $7,500 project.  Each site is de
 watching.  [<i>Of course, they died.</i>]</p>
 
 <p>So how do you really start up an open-source project?  Eric Raymond, one of the prime movers of
-the open-source culture, has a few very salient points in his essay <a href="www.tuxedo.org/~esr/writings/cathedral-bazaar/">
+the open-source culture, has a few very salient points in his essay <a href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">
 the Cathedral and the Bazaar</a>.  He also has a few other things in there, and it's definitely worth a read,
 so go read it.  Heck, while you're at it, go up a directory and read everything else in there.  [<i>Except the poor slob's politics.  And it appears
 that link is a good ol' 404 now anyway.  Oh, well.  Life goes on.</i>]</p>
