Published litprog.html from notes

--- a/litprog.html
+++ b/litprog.html
@@ -53,7 +53,7 @@ tools often wonder why not.  There have been no studies done of which I am aware
 of literate programming is that it is difficult to write a literate program quickly.  Yes, once it is written, it is impeccably
 documented, easily debugged (in those cases where it isn't already provably correct), simply maintained by the original author
 and others, and in general simply has a far higher quality in every respect than an "illiterate" program.  <strong>But</strong>
-it takes longer to see results.  As <a href=/linkout/www.unitedmedia.com/comics/dilbert/>we all know</a>, the software
+it takes longer to see results.  As we all know, the software
 industry is an impatient one.  And corporate IT in industries other than our beloved software are even less patient and less
 likely to understand the benefits of good coding style.</p>
 
