--- a/rfc1867.html
+++ b/rfc1867.html
@@ -2,7 +2,6 @@
 <head>
 <title>RFC1867 HTTP file upload</title>
 <link href="/styles/vv.css" rel="stylesheet">
-<link href="styles/vv.css" rel="stylesheet">
 </head>
 <body>
 <table width="100%">
@@ -11,14 +10,14 @@
 <div class="border">
 <div class="sidemenu">
 <p class="smtitle">vivtek</p>
-<p>[ <a href=/>home</a> ]</p>
-<p>[ <a href=/blog/>blog</a> ]</p>
-<p>[ <a href=/recent.html>recent</a> ]</p>
-<p>[ <a href=/projects/>programming</a> ]</p>
-<p>[ <a href=/translation/>translation</a> ]</p>
-<p>[ <a href=/fiction/>fiction</a> ]</p>
-<p>[ <a href=/contact.html>contact</a> ]</p>
-</div>
+<p>[ <a href="/">home</a> ]</p>
+<p>[ <a href="/blog/">blog</a> ]</p>
+<p>[ <a href="/recent.html">recent</a> ]</p>
+<p>[ <a href="/projects/">programming</a> ]</p>
+<p>[ <a href="/translation/">translation</a> ]</p>
+<p>[ <a href="/fiction/">fiction</a> ]</p>
+<p>[ <a href="/contact.html">contact</a> ]</p>
+</div></div></div>
 </td>
 <td valign="top"><div class="content">
 
@@ -124,7 +123,7 @@ My implementation in Perl.  Literately programmed.</p></li>
 </p><p></p>
 
 
-</div></td></td></table>
+</div></td></table>
 
 <br><br><br><br>
    <center><img src="/images/black.gif" height=1 width=300><br>
