--- a/code_analysis.html
+++ b/code_analysis.html
@@ -2,7 +2,6 @@
 <head>
 <title>Code analysis and software measurement</title>
 <link href="/styles/vv.css" rel="stylesheet">
-<link href="styles/vv.css" rel="stylesheet">
 </head>
 <body>
 <table width="100%">
@@ -11,14 +10,14 @@
 <div class="border">
 <div class="sidemenu">
 <p class="smtitle">vivtek</p>
-<p>[ <a href=/>home</a> ]</p>
-<p>[ <a href=/blog/>blog</a> ]</p>
-<p>[ <a href=/recent.html>recent</a> ]</p>
-<p>[ <a href=/projects/>programming</a> ]</p>
-<p>[ <a href=/translation/>translation</a> ]</p>
-<p>[ <a href=/fiction/>fiction</a> ]</p>
-<p>[ <a href=/contact.html>contact</a> ]</p>
-</div>
+<p>[ <a href="/">home</a> ]</p>
+<p>[ <a href="/blog/">blog</a> ]</p>
+<p>[ <a href="/recent.html">recent</a> ]</p>
+<p>[ <a href="/projects/">programming</a> ]</p>
+<p>[ <a href="/translation/">translation</a> ]</p>
+<p>[ <a href="/fiction/">fiction</a> ]</p>
+<p>[ <a href="/contact.html">contact</a> ]</p>
+</div></div></div>
 </td>
 <td valign="top"><div class="content">
 
@@ -90,7 +89,7 @@ on an academic level, I'll steer you in that direction.  More details about what
 project documentation, which I haven't started yet.  When I do start it, I will link to it from this page as well.</p>
 
 
-</div></td></td></table>
+</div></td></table>
 
 <br><br><br><br>
    <center><img src="/images/black.gif" height=1 width=300><br>
