Published analog.html from notes

--- a/analog.html
+++ b/analog.html
@@ -1,96 +1,79 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-   <TITLE>Analog web log analyzer</TITLE>
-   <META NAME="description" CONTENT="A short description of the Analog web access log analyzer and its features, with links to more detailed technical information, websites, and services.">
-   <META NAME="Keywords" CONTENT="Analog web log analysis common logfile format IIS logs">
+<title>Analog web log analyzer</title>
+<link href="/styles/vv.css" rel="stylesheet">
 </head>
-
-<body bgcolor="#FFFFFF" link="#000099" vlink="#990000" alink="990000">
+<body>
 <table width="100%">
 <tr>
 <td valign="top" width="150px"><div class="sidebar">
 <div class="border">
 <div class="sidemenu">
 <p class="smtitle">vivtek</p>
-<p>[ <a href=/>home</a> ]</p>
-<p>[ <a href=/blog/>blog</a> ]</p>
-<p>[ <a href=/recent.html>recent</a> ]</p>
-<p>[ <a href=/projects/>programming</a> ]</p>
-<p>[ <a href=/translation/>translation</a> ]</p>
-<p>[ <a href=/fiction/>fiction</a> ]</p>
-<p>[ <a href=/contact.html>contact</a> ]</p>
-</div>
-
-<hr />
-<script type="text/javascript"><!--
-google_ad_client = "pub-7508846022405297";
-google_ad_width = 120;
-google_ad_height = 600;
-google_ad_format = "120x600_as";
-google_ad_type = "text";
-google_ad_channel = "";
-//--></script>
-<script type="text/javascript"
-  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-
-</div>
-
-</div>
+<p>[ <a href="/">home</a> ]</p>
+<p>[ <a href="/blog/">blog</a> ]</p>
+<p>[ <a href="/recent.html">recent</a> ]</p>
+<p>[ <a href="/projects/">programming</a> ]</p>
+<p>[ <a href="/translation/">translation</a> ]</p>
+<p>[ <a href="/fiction/">fiction</a> ]</p>
+<p>[ <a href="/contact.html">contact</a> ]</p>
+</div></div></div>
 </td>
 <td valign="top"><div class="content">
 
+<div class="title">Analog web log analyzer</div>
+<div class="date">Published 2001-04-01</div>
 
-<center><table><tr><td>
-<h2>Topic: <u>Analog web log analyzer</u></h2>
-[&nbsp;<a href=#features>features</a>&nbsp;] [&nbsp;<a href=#more>additional&nbsp;information</a>&nbsp;] [&nbsp;<a href=#links>links</a>&nbsp;]
-</td></tr>
+<p>[&nbsp;<a href=#features>features</a>&nbsp;] [&nbsp;<a href=#links>links</a>&nbsp;]</p>
 
-<tr><td>
-Analog is an excellent basic log analysis tool written and maintained by Stephen Turner.
+<p>Analog is an excellent basic log analysis tool written and maintained by Stephen Turner.
 It's free and open source, and there are lots and lots of helper applications,
 knowledgeable people, and so forth.  A classic <a href=/open_source.html>open source</a> success story -- and it's the most used access log analysis tool in
-the world.  Why aren't you using it?
-<p>
-The current version of Analog as of this writing is 4.16.  For an example output, you can see <a href=/cur_stats4.html>my current
+the world.  Why aren't you using it?</p>
+
+<p>The current version of Analog as of this writing is 4.16.  For an example output, you can see <a href=/cur_stats4.html>my current
 stats</a> in the format I like them best.  Analog can do 32 different reports, and each is quite customizable.  There are
-plenty of things you <i>can't</i> do in Analog, but boy, the things it does, it does well.  And quickly.
-<p>
-Even if you have log-like files which aren't standard, you can quite easily describe their format for Analog, and it will
-analyze them handily.  This is convenient for analysis of traffic for any arbitrary Internet daemon.
-<p>
-Since I've been working with Analog for about two years now in the context of quite a few sites, I feel pretty good about
-offering commercial Analog support.  If you're in that market, <a href=mailto:analog@vivtek.com>drop us a line</a> and tell
-us what you need.
-</td></tr>
+plenty of things you <i>can't</i> do in Analog, but boy, the things it does, it does well.  And quickly.</p>
 
+<p>Even if you have log-like files which aren't standard, you can quite easily describe their format for Analog, and it will
+analyze them handily.  This is convenient for analysis of traffic for any arbitrary Internet daemon.</p>
 
-<tr><td>
-<a name=links>
-<center><font face=arial size=+1>LINKS</font></center></td></tr>
+<p>Since I've been working with Analog for about two years now in the context of quite a few sites, I feel pretty good about
+offering commercial Analog support. <em>[Or did, in 2001.]</em></p>
 
-<tr><td>
+<p><a name=links></p>
+
+<h2>LINKS</h2>
+
 <ul>
-<li><strong><a href=/linkout/www.analog.cx>Analog home</a></strong><br>
-This site has the latest source, links to the mailing list and list archives, and of course hosts the user manual as well.
-<li><strong><a href=/analog/solaris.html>Solaris precompiled executables</a></strong><br>
+<li><p><strong><a href="https://web.archive.org/web/20130805071936/http://analog.cx/">Analog home page up to 2013</a></strong> <br>
+Turner stopped updating Analog in 2004 and the site stayed up until 2013.</p></li>
+<li><p><strong><a href="https://www.c-amie.co.uk/software/analog/">Analog home page today</a></strong> <br>
+Since 2007, a fork of Analog has been homed here.</p></li>
+<li><p><strong><a href=/analog/solaris.html>Solaris precompiled executables</a></strong> (of historical interest only)<br>
 Getting Analog to compile is pretty easy, but there are a couple of gotchas I went through on
-Solaris.  Here's a nicely packaged version of my own 4.16 executable -- I compiled with gcc on Solaris 2.5.1,
-but the executable works fine on at least Solaris 2.6.
+Solaris a million years ago. OK, about twenty. Here's a nicely packaged version of my own 4.16 executable --
+I compiled with gcc on Solaris 2.5.1, but the executable works fine on at least Solaris 2.6.</p></li>
 </ul>
-</td></tr>
-
-</table>
 
 
-</div></td></td></table>
+<p></p><p>
+</p><p></p>
+
+
+</div></td></table>
 
 <br><br><br><br>
-    <center><img src="/images/black.gif" height=1 width=300><br>
-    <Font Size="-1"><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</Font>
+   <center><img src="/images/black.gif" height=1 width=300><br>
+   <font size="-1"><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">
+      <img alt="Creative Commons License" style="border-width:0"
+           src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" />
+      </a><br />
+   This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+   </font>
 </center>
 
-
+<script data-goatcounter="https://vivtek.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
