Published chunkabet.html from notes

--- a/xmledit/index.html
+++ b/xmledit/index.html
@@ -72,7 +72,7 @@ you can be generating XML and DocBook?
   <td valign=top>
    <i>4 April 2000</i>
   </td><td>
-   <a href="http://www.cosource.com:80/cgi-bin/cos.pl/bid/info/70">The proposal is made.</a>
+   <a href="https://web.archive.org/web/20010110181100/http://www.cosource.com/cgi-bin/cos.pl/bid/info/70">The proposal is made.</a>
   </td>
  </tr>
  <tr><td colspan=2>&nbsp;</td></tr>
