Published jombu/chunkabet.html from notes

--- a/jombu/chunkabet.html
+++ b/jombu/chunkabet.html
@@ -104,8 +104,8 @@ clusters. (Single-cluster syllables counted as both initial and final clusters.)
 in the 322 most frequent syllables of the 5000 most frequent words in half a million words of elementary school texts in 1971.</p>
 
 <p>125 being 5 cubed, I felt good about breaking that into 5 bands of 25 clusters apiece and ranking them from "meh" to "wow" on a fuzzy scale of felicity. They're a weird
-bunch of clusters, actually. A lot doesn't appear there. But it's a start. This is another of those design decisions where I realize that my goal here isn't to write
-an anagram calculator but to build a specific architecture using an anagram calculator as a goad. More will come.</p>
+bunch of clusters, actually. A lot of perfectly cromulent clusters didn't make the grade. But it's a start. This is another of those design decisions where I realize that
+my goal here isn't to write an anagram calculator but to build a specific architecture using an anagram calculator as a goad. More will come.</p>
 
 <p>Finally, I wrote another script to write this initial chunkabet out in a form easily consumed by Perl, then wrapped some code around it, wrote a few unit tests for
 the sake of sanity, and pushed the whole thing to Github so we can move on with our lives. You can see the Chunkabet class
