Published jombu/chunkabet.html from notes

--- a/jombu/chunkabet.html
+++ b/jombu/chunkabet.html
@@ -28,8 +28,8 @@
 <div class="title">Building a chunkabet for fun and profit</div>
 <div class="date">Published 2024-02-26</div>
 
-<div class="aside"><p>This is the first part of a work in progress, that being to reimplement a program called Jumbo, written by Douglas Hofstadter
-between 1980 and 1982 in Lisp, an elegant weapon for a more civilised age. My real project, of course, is not to write a really abstruse way of finding anagrams
+<div class="aside"><p>This is the first part of a work in progress, that being to reimplement a program called Jumbo, written "mostly in 1982" by Douglas Hofstadter
+in Lisp, an elegant weapon for a more civilised age. My real project, of course, is not to write a really abstruse way of finding anagrams
 that aren't even required to be English words, but to kick off the development of (my version of) the architecture as a whole. I'm starting with Jumbo because it
 has the fewest moving parts and out of a vague sense that ontogeny should recapitulate phylogeny. Because I'm Han Solo to Hofstadter's Obi Wan, I'm writing it in
 Perl, the common blaster of programming languages. This article is about one small aspect of the domain of word jumbles, and so it shouldn't have been the first
